tests/codegen/fail/enum/derive_no_values.rs
use juniper::GraphQLEnum;

#[derive(GraphQLEnum)]
enum Test {}

fn main() {}
